--- a/default.properties
+++ b/default.properties
@@ -1,5 +1,5 @@
-annotators = tokenize, ssplit, pos, lemma, ner, parse, dcoref
-#annotators = tokenize, ssplit, pos, lemma, ner, parse, dcoref, sentiment
+#annotators = tokenize, ssplit, pos, lemma, ner, parse, dcoref
+annotators = tokenize, ssplit, pos, lemma, ner, parse, dcoref, sentiment
 
 # A true-casing annotator is also available (see below)
 # annotators = tokenize, ssplit, pos, lemma, truecase
